[package]
name = "y-engine"
version = "0.1.0"
edition = "2021"
authors = ["alexdesander <alexdesander@tuta.io>"]
description = "A micro-engine that handles boilerplate (winit, wgpu, etc.) and adds quality-of-life features for easy application setup."
keywords = ["gamedev", "engine", "wgpu", "winit"]
categories = ["game-development"]
repository = "https://www.github.com/alexdesander/y-engine"
license = "MIT OR Apache-2.0"

[workspace.metadata.clippy]
args = ["-W", "clippy::pedantic"]

[dependencies]
softbuffer = "0.4"
winit = "0.30"
image = "0.25"
wgpu = "24"
pollster = "0.4.0"
crossbeam = "0.8.4"
rustc-hash = "2.1.0"
